[gd_scene load_steps=3 format=3 uid="uid://cvqm0spuwe3yi"]

[ext_resource type="Script" uid="uid://4vrv23d3w4j7" path="res://Talkable_Objects/Areas/talking_area.gd" id="1_wnpu5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4i1pa"]
size = Vector2(20, 16)

[node name="TalkingArea" type="Area2D"]
script = ExtResource("1_wnpu5")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_4i1pa")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
